# symphony

./: .pylintrc  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
proto/symphony/v1/: protocol.proto
scripts/: env.sh  format_code.sh  gen_proto.sh
src/symphony/: __main__.py  cli.py  config.py  logging_config.py  runtime.py
src/symphony-conductor-webui/: README.md  build.sh  index.html  tailwind.config.ts  vite.config.ts
src/symphony-conductor-webui/src/: App.tsx  index.css  main.tsx
src/symphony-conductor-webui/src/components/: Layout.tsx  ThemeToggle.tsx
src/symphony-conductor-webui/src/components/conda/: CondaEnvModal.tsx
src/symphony-conductor-webui/src/components/deployments/: DeploymentLogsDrawer.tsx  DeploymentModal.tsx  DeploymentViewDrawer.tsx
src/symphony-conductor-webui/src/pages/: CondaEnvsPage.tsx  DeploymentsPage.tsx  Index.tsx  NodesPage.tsx
src/symphony/conductor/: app.py  conda_env_store.py  deployment_assignment_registry.py  deployment_store.py  http_server.py  models.py  node_registry.py  scheduler.py  service.py
src/symphony/conductor/api/: routes.py  server.py
src/symphony/conductor/ui/: ui_router.py
src/symphony/interface/: sqlite.py
src/symphony/node/: agent.py  app.py  conda_env.py  runner_exec.py
src/symphony/transport/: grpc_client.py  grpc_server.py  security.py
src/symphony/util/: backoff.py
src/symphony/util/resource_monitoring/: cpu.py  disk.py  models.py  monitor.py  nvidia.py  ram.py  utils.py
src/symphony/v1/: __init__.py  protocol_pb2.py  protocol_pb2_grpc.py
(+6 files in other folders)
